# ContractIQ

./: .gitignore  nda.py  pyproject.toml
md_templates/: employee_agreement.md  nda.jinja  nda.md
src/: home.py  index.py
src/pages/: document_chat.py  employee_agreement.py  nda.py
src/pages/graphs/: employee_agreement.py  nda.py  nda_graph.py
src/pages/tools/: employee_agreement.py  nda.py  nda_tools.py
src/templates/: employee_agreement.jinja
src/utils/: __init__.py  document_generator.py
templates/: nda.md
