[tool.poetry]
name = "contractiq"
version = "0.1.0"
description = "An AI assistant to draft NDAs, employee and intern agreements"
authors = ["Ganesh Rao <mister.xrao@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyterlab = "^4.2.5"
langgraph = "^0.2.35"
python-dotenv = "^1.0.1"
langchain-openai = "^0.2.2"
streamlit = "^1.39.0"
jinja2 = "^3.1.4"
weasyprint = "^62.3"
markdown = "^3.7"
watchdog = "^5.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
